<resources>
    <string name="app_name">人生之路</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_path">Path</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="path">疾病軌跡</string>
    <string name="dashboard">精準預防</string>
    <string name="setting">設定</string>
    <string name="health_passport">健康存摺</string>
    <string name="new_health_passport">新增健康存摺</string>
    <string name="health_passport_empty">目前並無下載健康存摺</string>
    <string name="doctor_auth">醫生授權</string>
    <string name="doctor_auth_empty">目前並無授權給醫生</string>
    <string name="new_doctor_auth">新增授權醫生</string>
    <string name="auth">授權</string>
    <string name="normal_setting">一般設定</string>
    <string name="news">通知</string>
    <string name="account">帳號</string>
    <string name="another">其他</string>
    <string name="privacy_policy">隱私權政策</string>
    <string name="version">版本號</string>
    <string name="log_out">登出</string>
    <string name="insert">新增</string>
    <string name="action_settings">Settings</string>
    <string name="hospital_">醫院：</string>
    <string name="branch_">科別：</string>
    <string name="doctor_">醫生：</string>
    <string name="account_data">帳戶資料</string>
    <string name="input_password">請輸入密碼</string>
    <string name="input_password_detail">為了保護您的隱私\n請再輸入一次密碼</string>
    <string name="password">密碼</string>
    <string name="phone">電話</string>
    <string name="ID">身分證字號</string>
    <string name="edit">編輯</string>
    <string name="finish">完成</string>
    <string name="choose">選擇</string>
    <string name="agree">同意</string>
    <string name="disagree">拒絕</string>
    <string name="account_main_policy">Road Of Life所蒐集的資料可能涉及您的隱私及個人醫療資訊，如經您提供\n代表您以書面同意本APP依使用者條款蒐集、處理及利用您的個人資料</string>
    <string name="path_error">您還尚未同意並使用自己的健康存摺分析風險係數，點我前往登入健康存摺並下載</string>
    <string name="privacy_policy_detail">人生之路(以下簡稱本服務)是由「國立台北科技大學資訊工程系生醫
資訊實驗室(以下簡稱本實驗室)所建置。本實驗室係依照以下服務條款之約定
(以下稱「本條款」)提供本實驗室人生之路使用者(以下稱「本
服務使用者」)使用本實驗室之各項網路資訊服務(以下簡稱「網
路資訊服務」)，使用本實驗室之各項網路資訊服務者請務必
詳細閱讀本條款相關內容以保障權益，當本服務使用者
開始使用本實驗室之各項網路資訊服務時，視為務使用者已確實閱
讀丶瞭解並冋意遵守本條款。服務使用者於本條款為任何修改
或變更後仍繼續使用本實驗室之各項網路資訊服務時，視為使用
者已確實閱讀丶暸瞭解並同意遵守本條款之修改或變更。\n\n

一、隱私權保護政策的適用範圍\n\n

隱私權保護政策內容，包括本服務如何處理在您使用本實驗室之各
項網路資訊服務時收集到的個人識別資料。
隱私權保護政策不適用於本服務以外的相關連結，也不適用於非
本服務所委託或參與管理的人員。\n\n

二丶資料的蒐集與使用方式\n\n

為了在本服務上提供您最佳互動性服務。可能會請您提供相關個
人的資料，其範圍如下:\n
於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用時間丶
瀏覽及點選資料記錄等。做為我們增進本實驗室之各項網路資訊服
務的參考依據，此記錄為內部應用，決不對外公布。
除非取得您的同意或其他法令之特別規定，本服務絕不會將您的
個人資料揭露於第三人或使用於蒐集目的以外之其他用途
以下針對收集的資料類型丶收集這些資料的原因以及些資料的用
途說明：\n
個人資料之類別：\n
件信箱地址等。\n
2.政府資料中之辨識者：如身分證統一編號丶護照號碼等。\n
3.個人描迹：如年齡丶性別等。\n
4.身體描娏：如血壓值丶血糖值丶血氧濃度丶體溫、身高丶體
重等。\n
5.個人相關疾病史：如慢性病、感冒等。\n

三丶資料之保護\n\n

本服務主機均設有防火牆丶防毒系統等相關的各項資訊安全設備
及必要的安全防護措施，加以保護服務及您的個人資料。\n\n

四丶服務對外的相關連結\n\n

本服務提供其他服務之網路連結，您也可經由本服務所提供的連
結，點選進入其他服務。但該連結之服務不適用於本服務的隱私
權保護政策。您必須參考該連結之服務的隱私權保護政策。\n\n

五丶隱私權保護政策之修正\n\n

本服務隱私權保護政策將因應需求隨時進行修正，修正後的條款
將刊登於服務上。\n\n

六丶網路協定安全\n\n

本實驗室服務對於所有重要的個人資料均會經過安全加密保護
均以國際安全標準的 SSL protocol( Secure Socket Layer通訊
協定)加密處理。\n\n

七、服務之停止或終止\n\n

1. 本服務如發生下列情形之一時，本實驗室有權不經通知逕行
停止或中斷提供服務，如因此致用戶或第三人產生困擾丶不便或
損害，均不負任何法律責任：\n
對電子通信設備進行必要之保養及施工時。\n
發生突發性之電子通信設備故障時。\n
由於所申請之電子通信服務因仼何原因被停止，無法提供服務
時。\n
由於天災等不可抗力之因素致無法提供服務時。\n
對於本服務相關系統設備進行遷移丶更換或維護時。\n
因不可歸責於本分公司事由所造成服務之停止或中斷。\n
因不可抗力所造成服務之停止或中斷。\n
2.基於網際網路之特性本服務使用者瞭解並同意於使用本分
公司之各項網路資訊服務時，應自行採取防護措施,如因本分公
司丶協力廠商或相關電信業者網路系統軟硬體設備之故障丶失靈
或人為操作上之疏失而致本公司之各項網路資訊服務全部或一部
中斷丶暫時無法使用丶遲延丶或造成資料傳輸或儲存上之漏誤丶
或遭第三人侵入系統篡改偽造資料時，本實驗室不負仼何賠償責
任。\n
3.如本服務使用者有違反本條款或相關法令或有其他不當使用
之情形發生時，本實驗室得不經催告逕行加以限制或終止其使用
本實驗室之各項網路資訊服務之權利。用戶不得因此要求補償或賠
償。\n\n

八丶擔保責仼免除及責任限制\n\n

本實驗室就各項網路資訊服務，不負擔任何明示或默示之擔保責
任，亦不保證各項服務之穩定丶安全丶無誤丶及不中斷。
本實驗室不保證使用各項網路資訊服務之結果或經由本實驗室服
務獲得之資訊符合用戶之期望，亦不保證用戶不會因此接觸到不
適當之內容。本服務使用者如無法使用本服務時，其所致之任何直接丶間接丶
衍生丶或特別損害等本實驗室均不負任何賠償責任。\n\n

九丶權利歸屬及智慧財產權\n\n

本實驗室服務上所使用或提供之軟體丶程式及內容(包括但不限
於文字丶說明丶圖畫丶圖片丶圖形丶檔案丶頁面設計丶服務規劃
與安排等)之專利權丶著作權丶商標權丶營業秘密丶專門技術及
其他智慧財產權均屬本實驗室或其他權利人所有，非經權利人事先
書面授權同意本服務使用者不得重製丶公開傳播丶公開播送丶
公開上映丶改作、編輯丶出租丶散布丶進行還原工程丶解編、反
向組譯丶或其他方式之使用，如有違反，除應自行負法律責任
外，如因而對本實驗室造成損害或損失，本實驗室有權向該服務使用
者請求損害賠償。\n\n

十丶準據法及管轄法院\n\n

關於本條款之解釋或適用以中華民國之法律為準據法。
本服務使用者因使用本服務而與本實驗室所生之爭議，同意依誠信
原則解決之，如有訴訟之必要時，同意以台灣台北地方法院為第
一審管轄法院。\n\n

十一、本條款修訂之權利\n\n

本實驗室有權隨時修訂本條款及相關告知事項，並隨時透過本服務
公佈公告之，修正之內容自公告時起生效，不另行個別通知，本
服務使用者不得因此而要求任何補償或賠償。
</string>
    <string name="home_page">首頁</string>
    <string name="disease_select">共病選擇</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_posturl_check_health_passport">"https://lunsenlu.cf/health_passport/check_health_passport"</string>
    <string name="label_homepage_notification">請選擇個人疾病資料以進行風險預測</string>
    <string name="disease_name">disease name</string>
    <string name="disease_description">disease description or amount</string>
    <string name="disease_risk">40%</string>
    <string name="btn_next">下一步</string>
    <string name="breast_cancer">乳癌</string>
    <string name="breast_cancer_desription">目前乳癌發生率為國內女性好發癌症的第一位，死亡率則為第四位</string>
    <string name="cancer_related_disease">癌症相關疾病</string>
    <string name="none_of_above_disease">無上述症狀</string>
    <string name="btn_confirm">確定</string>
    <string name="uterus_diseases">子宮相關疾病</string>
    <string name="ovary_diseases">卵巢相關疾病</string>
    <string name="bladder_disease">膀胱相關疾病</string>
    <string name="return_diseases">大腸相關疾病</string>
    <string name="btn_skip">跳過</string>
    <string name="label_gender">性別</string>
    <string name="label_height">身高</string>
    <string name="hint_click_to_pick">點擊選取</string>
    <string name="label_weight">體重</string>
    <string name="rb_male">男</string>
    <string name="rb_female">女</string>
    <string name="label_birth_year_month">生日年月</string>
    <string name="label_legend_label">legend_label</string>
    <string name="healthpass_instruction">

</string>
    <string name="healthpass_instruction_button_order">按鈕點選順序依序如下：\n
[下載檔案]>[上傳檔案]\n</string>
    <string name="healthpass_instruction_1">1.點選左下方[下載檔案]，登入健康存摺並於首頁點選下載服務。\n
</string>
    <string name="healthpass_instruction_2">\n2.於下載服務選擇JSON下載，此步驟會先進行檔案產製，待產製完成後進行下載。\n
</string>
    <string name="healthpass_instruction_3">\n3.檔案完成下載後，請開啟檔案並解壓縮，回到此頁面。 (解壓縮密碼為身分證字號)\n\n
        4.回到此頁面後，點選[上傳檔案]，選取解壓縮後的JSON檔案，確認本装置已取得資料。\n\n
5.最後可於共病選擇頁面，確認本裝置是否成功代入疾病資料。 (若健康存摺中無相關共病，則共病頁面將不會更新)\n
</string>
    <string name="label_disclaimer">本APP的評估項目會受到其他 因素影響，評估結果並不能代表您未來一定會或一定不會罹患特定疾病。</string>
    <string name="title_activity_person_data">PersonDataActivity</string>
    <string name="kidney_diseases">腎臟相關疾病</string>
    <string name="preemie_diseases">早產相關疾病</string>
</resources>
