<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_track">

    <fragment
        android:id="@+id/navigation_track"
        android:name="com.bilab.lunsenluandroid.main.home.DiseaseHomeFragment"
        android:label="@string/path"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bilab.lunsenluandroid.main.category.DiseaseCategoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_disease" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.bilab.lunsenluandroid.main.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>