<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.setting.HealthPassActivity">

    <ImageView
        android:id="@+id/imv_previous"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="7dp"
        android:scaleType="centerInside"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/arrow_white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/main"
        android:gravity="center"
        android:text="健康存摺"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line_instruction"
        android:layout_width="340dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#6A9F9B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_instruction" />

    <View
        android:id="@+id/line_instruction2"
        android:layout_width="340dp"
        android:layout_height="2dp"
        android:layout_marginBottom="32dp"
        android:background="#6A9F9B"
        app:layout_constraintBottom_toTopOf="@+id/btn_download"
        app:layout_constraintEnd_toEndOf="@+id/line_instruction"
        app:layout_constraintStart_toStartOf="@+id/line_instruction" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_round_button"
        android:contentDescription="Round Button"
        android:text="下載檔案"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_round_button"
        android:contentDescription="Round Button"
        android:text="上傳檔案"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_download" />

    <TextView
        android:id="@+id/tv_title_instruction"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="操作步驟"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imv_instruction"
        app:layout_constraintStart_toEndOf="@+id/imv_instruction"
        app:layout_constraintTop_toTopOf="@+id/imv_instruction"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imv_instruction"
        android:layout_width="40dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/line_instruction2"
        app:layout_constraintEnd_toEndOf="@+id/line_instruction"
        app:layout_constraintStart_toStartOf="@+id/line_instruction"
        app:layout_constraintTop_toBottomOf="@+id/line_instruction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_instruction_button_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/healthpass_instruction_button_order"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_instruction_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/healthpass_instruction_1"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_instruction_button_order" />

                <ImageView
                    android:id="@+id/imv_download_instruction_1"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:src="@drawable/download_instruction_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_instruction_1" />

                <TextView
                    android:id="@+id/tv_instruction_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/healthpass_instruction_2"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imv_download_instruction_1" />

                <ImageView
                    android:id="@+id/imv_download_instruction_2"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:src="@drawable/download_instruction_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_instruction_2" />

                <TextView
                    android:id="@+id/tv_instruction_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/healthpass_instruction_3"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imv_download_instruction_2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>